--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,18 +1,159 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main.playlist.PlaylistFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Playlist" />
+        android:id="@+id/sectionTitle"
+        style="@style/AppTheme.SectionTile"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/playlist" />
 
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/navigationIcon"
+        style="@style/AppTheme.SectionIcon"
+        android:contentDescription="@string/navigation_icon"
+        app:layout_constraintBottom_toBottomOf="@id/sectionTitle"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toRightOf="@+id/sectionTitle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/sectionTitle"
+        app:srcCompat="@drawable/ic_nav" />
+
+
+    <TextView
+        android:id="@+id/playlistsNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:paddingLeft="@dimen/margin_large"
+        android:paddingRight="@dimen/margin_large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/playButton"
+        app:layout_constraintTop_toBottomOf="@+id/sectionTitle"
+        tools:text="118 tracks" />
+
+    <Button
+        android:id="@+id/playButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_medium"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:background="@drawable/accent_round_corner"
+        android:drawableStart="@drawable/ic_play_white"
+        android:drawablePadding="@dimen/padding_large"
+        android:minHeight="0dp"
+        android:paddingLeft="@dimen/padding_xx_large"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingRight="@dimen/padding_xx_large"
+        android:paddingBottom="@dimen/padding_small"
+        android:text="@string/play"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/text_size_x_small"
+        app:layout_constraintBottom_toBottomOf="@+id/playlistsNum"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toRightOf="@+id/playlistsNum"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/playlistsNum" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playlistRV"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingTop="@dimen/padding_small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playButton" />
+
+
+    <ImageView
+        android:id="@+id/manHoldingBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_xx_large"
+        android:contentDescription="@string/man_holding_an_empty_box"
+        android:src="@drawable/no_playlist"
+        app:layout_constraintTop_toBottomOf="@+id/sectionTitle"
+        app:layout_constraintBottom_toTopOf="@+id/guideLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <TextView
+        android:id="@+id/noPlaylist"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_xx_large"
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:gravity="center"
+        android:text="@string/no_playlist"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/manHoldingBox"
+        app:layout_constraintStart_toStartOf="@+id/manHoldingBox"
+        app:layout_constraintTop_toBottomOf="@+id/guideLine" />
+
+    <TextView
+        android:id="@+id/addPlaylistSuggestion"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_x_large"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_x_large"
+        android:gravity="center"
+        android:text="@string/add_playlist_suggestion"
+        app:layout_constraintEnd_toEndOf="@+id/manHoldingBox"
+        app:layout_constraintStart_toStartOf="@+id/manHoldingBox"
+        app:layout_constraintTop_toBottomOf="@+id/noPlaylist" />
+
+    <Button
+        android:id="@+id/addPlayList"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:paddingTop="@dimen/padding_large"
+        android:paddingBottom="@dimen/margin_large"
+        android:text="@string/add_new"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintEnd_toEndOf="@+id/manHoldingBox"
+        app:layout_constraintStart_toStartOf="@+id/manHoldingBox"
+        app:layout_constraintTop_toBottomOf="@+id/addPlaylistSuggestion" />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/noPlaylistGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="manHoldingBox, noPlaylist, addPlaylistSuggestion, addPlayList" />
+
+    <androidx.constraintlayout.widget.Group
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/playlistsGroup"
+        android:visibility="gone"
+        app:constraint_referenced_ids="playlistsNum, playButton, playlistRV"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
