--- a/app/src/main/res/drawable/bottom_sheet_round_bg.xml
+++ b/app/src/main/res/drawable/bottom_sheet_round_bg.xml
@@ -5,5 +5,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="@color/bottomPlaybackBgColor" />
+    <solid android:color="@color/fadedColorPrimary" />
 </shape>
