--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,7 +16,7 @@
     <color name="colorNavItemBgSelected">@color/colorAccent</color>
     <color name="colorBurOverlay">#ED070E21</color>
     <color name="seek_bar_background">#454956</color>
-    <color name="bottomPlaybackBgColor">#161C2C</color>
+    <color name="fadedColorPrimary">#161C2C</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColorSecondary">#B2FFFFFF</color>
 </resources>
