--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -28,6 +28,7 @@
             android:contentDescription="@string/track_album_art"
             android:scaleType="centerCrop"
             android:src="@{playlist}"
+            android:transitionName="@{playlist.toString()}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/thumb_circular_default" />
