Implemented playlist adding & playlist songs menu

--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -29,6 +29,15 @@
         app:layout_constraintTop_toTopOf="@+id/sectionTitle"
         app:srcCompat="@drawable/ic_nav" />
 
+    <ImageButton
+        android:id="@+id/addPlayListIcon"
+        style="@style/AppTheme.SectionIcon"
+        android:contentDescription="@string/add_new"
+        app:layout_constraintBottom_toBottomOf="@id/navigationIcon"
+        app:layout_constraintEnd_toStartOf="@+id/navigationIcon"
+        app:layout_constraintTop_toTopOf="@+id/navigationIcon"
+        app:srcCompat="@drawable/ic_add" />
+
 
     <TextView
         android:id="@+id/playlistsNum"
