--- a/app/src/main/res/layout/fragment_new_playlist_dialog.xml
+++ b/app/src/main/res/layout/fragment_new_playlist_dialog.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:padding="@dimen/padding_large"
     tools:context=".main.playlist.NewPlaylistDialogFragment">
 
@@ -24,7 +25,7 @@
 
 
     <TextView
-        android:id="@+id/createPlaylist"
+        android:id="@+id/createAPlaylist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/create_a_playlist"
@@ -37,12 +38,12 @@
 
     <View
         android:id="@+id/thumbBackground"
-        android:layout_width="100dp"
-        android:layout_height="103dp"
+        android:layout_width="135dp"
+        android:layout_height="139dp"
         android:layout_marginTop="@dimen/margin_xxx_large"
         android:background="@drawable/accent_round_corner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createPlaylist" />
+        app:layout_constraintTop_toBottomOf="@+id/createAPlaylist" />
 
     <ImageView
         android:layout_width="0dp"
@@ -59,13 +60,15 @@
         android:id="@+id/thumbText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxEms="6"
         android:paddingStart="@dimen/padding_medium"
         android:paddingTop="@dimen/padding_small"
         android:paddingEnd="@dimen/padding_medium"
         android:paddingBottom="@dimen/padding_medium"
         android:text="@string/create_playlist_thumb_text"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="5sp"
+        android:textSize="@dimen/text_size_x_small"
         app:layout_constraintBottom_toBottomOf="@+id/thumbBackground"
         app:layout_constraintEnd_toEndOf="@id/thumbBackground"
         app:layout_constraintEnd_toStartOf="@+id/uploadPicture"
@@ -75,8 +78,8 @@
         android:id="@+id/uploadPicture"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/padding_large"
-        android:paddingEnd="@dimen/padding_large"
+        android:paddingStart="@dimen/padding_x_large"
+        android:paddingEnd="@dimen/padding_x_large"
         android:text="@string/upload_playlist_image"
         android:textSize="@dimen/text_size_x_small"
         app:layout_constraintBottom_toBottomOf="@+id/thumbBackground"
@@ -85,27 +88,40 @@
         app:layout_constraintTop_toTopOf="@+id/thumbBackground" />
 
 
-    <com.google.android.material.textfield.TextInputLayout
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_xx_large"
+        android:background="@drawable/edit_text_background"
+        android:hint="@string/playlist_name"
+        android:paddingStart="@dimen/padding_x_large"
+        android:paddingTop="@dimen/padding_medium"
+        android:paddingEnd="@dimen/padding_x_large"
+        android:paddingBottom="@dimen/padding_medium"
+        app:hintAnimationEnabled="false"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:hint="@string/playlist_name"
-        app:layout_constraintTop_toBottomOf="@+id/thumbBackground">
+        android:id="@+id/playlistNameField"
+        android:maxLines="1"
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        app:layout_constraintTop_toBottomOf="@+id/thumbBackground" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding_medium"
-            android:paddingBottom="@dimen/padding_medium"
-            android:paddingStart="@dimen/padding_x_large"
-            android:paddingEnd="@dimen/padding_x_large"
-            android:background="@drawable/edit_text_background"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-
+    <Button
+        android:id="@+id/createPlaylist"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_x_large"
+        android:paddingTop="@dimen/button_padding"
+        android:paddingBottom="18dp"
+        android:enabled="false"
+        android:text="@string/create_playlist"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playlistNameField" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
