--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -49,6 +49,7 @@
         android:text="@string/get_started"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/text_size_large"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/guideLine2"
@@ -63,6 +64,7 @@
         android:gravity="center"
         android:padding="@dimen/margin_x_large"
         android:text="@string/read_storage_permission_info"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/getStarted"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
